<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1976d2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="欢迎"
            android:textColor="#ffffff"
            android:clickable="true"
            android:id="@+id/Map"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:textCursorDrawable="@null"
                android:background="@drawable/round_edittext"
                android:id="@+id/account"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:textSize="16dp"
                app:met_floatingLabel="normal"
                android:layout_height="wrap_content"
                android:hint="输入手机号"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:background="@drawable/round_edittext"
                android:singleLine="true"
                android:password="true"
                android:textSize="16dp"
                android:layout_width="match_parent"
                app:met_floatingLabel="normal"
                android:textCursorDrawable="@null"
                android:layout_height="wrap_content"
                android:hint="请输入密码"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:textColor="#999999"
                android:gravity="center"
                android:text="注    册"/>
            <TextView
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:id="@+id/forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#999999"
                android:gravity="center"
                android:text="忘记密码" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="bottom"
        android:background="@drawable/round_button"
        android:orientation="vertical">
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@null"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:text="登录"/>
    </LinearLayout>
</LinearLayout>
